# NBodyGPU

./: CMakeLists.txt
include/: body.h  bodycpu.h  bodycuda.h
src/: bodycpu.cpp
